Fixing tree item opener visibility.

--- a/src-gwt/org/opencms/ade/sitemap/client/ui/css/sitemapItem.css
+++ b/src-gwt/org/opencms/ade/sitemap/client/ui/css/sitemapItem.css
@@ -88,11 +88,7 @@ div.marker {
 
 .hasChildren {} 
 
-.hasNoChildren {} 
-
 .hasNavChildren {}
-
-.hasNoNavChildren {}
 
 .navMode .hasNoNavChildren .treeItemOpener {
 	display: none; 
